--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "ext-intl": "*",
         "barryvdh/laravel-debugbar": "^3.13",
         "guzzlehttp/guzzle": "^7.2",
         "laravel-frontend-presets/material-dashboard": "^2.0",
@@ -13,8 +14,8 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.4",
-        "tgozo/laravel-codegen": "^1.0",
-        "ext-intl": "*"
+        "livewire/livewire": "^2.12",
+        "tgozo/laravel-codegen": "^1.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
