--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.4",
+        "maatwebsite/excel": "^3.1",
         "rawilk/laravel-modules": "^0.3.0"
     },
     "require-dev": {
